2004-03-30  Carl Worth  <cworth@isi.edu>

	* src/Makefile.am (libcairo_la_LIBADD): Add -lz.

2004-03-30  Carl Worth  <cworth@isi.edu>

	* configure.in: Add checks for Xrender.h in xrender.pc is not
	found. Remove AC_HELP_STRING to be compatible with older versions
	of autoconf (thanks to Bill Spitzak <spitzak@d2.com>).

	* src/cairo_xlib_surface.c (_cairo_xlib_surface_set_clip_region):
	Add question on semantics with empty region. Fix missing return
	value.

	* src/cairo_image_surface.c
	(_cairo_image_surface_set_clip_region): Export for internal use.
	(_cairo_image_abstract_surface_set_clip_region): Add silly wrapper
	to match the backend interface.

	* src/cairo_gstate.c (_cairo_gstate_init_clip): Remove unused
	variables.

	* src/cairo.h: Add proposal for cairo_xlib_surface_set_size.

	* BUGS: Added note about problem with cairo_scale_font.

2004-03-23  Olivier Andrieu  <oliv__a@users.sourceforge.net>
	
	* src/cairo_ps_surface.c (_cairo_ps_surface_set_clip_region)
	* src/cairo_png_surface.c (_cairo_png_surface_set_clip_region):
	Implement _set_clip_region by delegating it to the image backend.

	* src/cairo_xcb_surface.c (_cairo_xcb_surface_set_clip_region):
	Add a stub.

	* src/cairo.h: Add missing (?) cairo_init_clip

2004-03-20  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* configure.in: Move the PNG_CFLAGS/_LIBS substitutes outside
	the conditional, to match what is already done for XCB.
	Do the same for XRENDER_CFLAGS/LIBS.

	* configure.in: Substitute PNG_CFLAGS, PNG_LIBS on
	the configure path when use_png is not enabled to prevent
	the substituions being undefined.

2004-03-19  Graydon Hoare  <graydon@redhat.com>

	* src/cairo.c (cairo_init_clip): Add.
	* src/cairo_gstate.c:
	Initialize, finalize and copy clip.region.
	Detect rectangular clips and push down to backend.

	* src/cairoint.h
	(cairo_surface_backend_t): Add set_clip_region slot.
	(cairo_clip_rec_t): Add region slot.
	(_cairo_gstate_init_clip)
	(_cairo_surface_set_clip_region): Prototype.
